# pv-forecast

./: .gitignore  .python-version  README.md  __azurite_db_blob__.json  __azurite_db_blob_extent__.json  __azurite_db_queue__.json  __azurite_db_queue_extent__.json  __azurite_db_table__.json  requirements.txt
etl/: .python-version  dev.ipynb  pyproject.toml  run_latest_nwp.py  run_versioned_nwp.py
etl/azure_function/: Dockerfile  function_app.py  logs.py  pipeline.py  requirements.txt  run_latest_nwp.py  run_versioned_nwp.py  test.py
etl/azure_function/integrations/: dataset.py  dmi.py  log.py
etl/azure_function/jobs/latest_nwp/: job.py  transformations.py
etl/azure_function/jobs/versioned_nwp/: job.py  transformations.py
etl/etl/: Dockerfile.latest_nwp  function_app.py  logs.py  pipeline.py  requirements.txt  run_latest_nwp.py  run_versioned_nwp.py
etl/etl/integrations/: dataset.py  dmi.py  http.py
etl/etl/jobs/latest_nwp/: job.py  transformations.py
etl/etl/jobs/versioned_nwp/: job.py  transformations.py
etl/zarr_templates/: make_latest_nwp_zarr.ipynb  make_versioned_nwp_zarr.ipynb
sdk/: .python-version  dev.ipynb  pyproject.toml
sdk/sdk/: __init__.py
sdk/sdk/integrations/datalake/: __init__.py  datalake.py  dataset.py  log.py
web/: .python-version  dev.ipynb  package-lock.json  package.json  pyproject.toml
web/app/: __main__.py
web/app/assets/: layout.css
web/app/components/: __init__.py  field.py  form.py  navbar.py  section.py  tab.py
web/app/integrations/: log.py
web/app/pages/forecast/: callbacks.py  layout.py
web/app/pages/home/: __init__.py  callbacks.py  layout.py
web/app/simulation/: formulas.py  kdtree.py  models.py  simulator.py
web/cache/: __init__.py
web/dash_app/: __main__.py  db.py  dev.ipynb  dev.py  sim.ipynb
web/dash_app/assets/: layout.css  typography.css
web/dash_app/elements/: __init__.py  field.py  form.py  navbar.py  section.py  tab.py
web/dash_app/frames/display/: __init__.py  callbacks.py  layout.py
web/dash_app/frames/forecast/: __init__.py  callbacks.py  layout.py
web/dash_app/frames/home/: _OLD_create.py  __init__.py  callbacks.py  create.py  layout.py
web/dash_app/logic/files/: __init__.py  nwp.py
web/dash_app/scripts/: nwp_kdtree_generation.py
web/kd_tree/: make_kd_tree.ipynb
(+52 files in other folders)
