[tool.poetry]
name = "etl"
version = "0.1.0"
description = ""
authors = ["uch <uch@energinet.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^1.9.0"
pv-forecast-sdk = {path = "/home/uch/PVForecast/sdk"}
cfgrib = "^0.9.14.1"
azure-functions = "^1.21.3"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
